[project]
name = "hat-asn1"
version = "0.6.8"
description = "Hat ASN.1 parser and encoder"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hat-json ~=0.5.28",
    "hat-peg ~=0.5.9",
    "hat-util ~=0.6.16",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-asn1.git"
Documentation = "http://hat-asn1.hat-open.com"

[project.optional-dependencies]
dev = ["hat-doit ~=0.15.16"]

[build-system]
requires = ["hat-doit ~=0.15.16"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
